Fixed problems with subtitles; Fixed filter and sort not working; Add deleted medias to list